--- a/depr.strstreambuf.cons.html
+++ b/depr.strstreambuf.cons.html
@@ -71,9 +71,9 @@ virtual ~strstreambuf();
 Destroys an object of class
 <span class='texttt'>strstreambuf</span>.
 The function frees the dynamically allocated array object only if
-<span class='texttt'>strmode &amp; allocated != 0</span>
+<span class='texttt'>(strmode &amp; allocated) != 0</span>
 and
-<span class='texttt'>strmode &amp; frozen == 0</span>. (<a href='depr.strstreambuf.virtuals'>[depr.strstreambuf.virtuals]</a> describes how a dynamically allocated array object is freed.)
+<span class='texttt'>(strmode &amp; frozen) == 0</span>. (<a href='depr.strstreambuf.virtuals'>[depr.strstreambuf.virtuals]</a> describes how a dynamically allocated array object is freed.)
 </p></div></div><div class='footnote' id='footnote-334'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-334'>334)</a></div><p >The function signature
 <span class='texttt'>strlen(const char*)</span>
 is declared in
