--- a/depr.strstreambuf.virtuals.html
+++ b/depr.strstreambuf.virtuals.html
@@ -37,9 +37,9 @@ If <span class='texttt'>pfree</span> is not a null pointer,
 the function calls
 <span class='texttt'>(*pfree)(p)</span>.
 Otherwise, it evaluates the expression <span class='texttt'>delete[]p</span>.</p></div></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><div class='itemdescr'><p >If
-<span class='texttt'>strmode &amp; dynamic == 0</span>,
+<span class='texttt'>(strmode &amp; dynamic) == 0</span>,
 or if
-<span class='texttt'>strmode &amp; frozen != 0</span>,
+<span class='texttt'>(strmode &amp; frozen) != 0</span>,
 the function cannot extend the array (reallocate it with greater length) to make a write position available.
 </p></div></div><p ><span class='indexparent'><a class='index' id='pbackfail,strstreambuf'></a></span><span class='indexparent'><a class='index' id='strstreambuf,pbackfail'></a></span><code class='itemdecl'>
 int_type pbackfail(int_type c = EOF) override;
@@ -55,7 +55,7 @@ to <span class='texttt'>gnext</span>.</p><p >Returns <span class='texttt'>c</spa
 </p></li><li id='7.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#7.2'>(7.2)</a></div><p >If
 <span class='texttt'>c != EOF</span>,
 if the input sequence has a putback position available, and if
-<span class='texttt'>strmode</span> &amp; <span class='texttt'>constant</span> is zero,
+<span class='texttt'>strmode &amp; constant</span> is zero,
 assigns <span class='texttt'>c</span> to
 <span class='texttt'>*--gnext</span>.</p><p >Returns
 <span class='texttt'>c</span>.
