--- a/depr.str.strstreams.html
+++ b/depr.str.strstreams.html
@@ -157,9 +157,9 @@ virtual ~strstreambuf();
 Destroys an object of class
 <span class='texttt'>strstreambuf</span>.
 The function frees the dynamically allocated array object only if
-<span class='texttt'>strmode &amp; allocated != 0</span>
+<span class='texttt'>(strmode &amp; allocated) != 0</span>
 and
-<span class='texttt'>strmode &amp; frozen == 0</span>. (<a href='depr.strstreambuf.virtuals'>[depr.strstreambuf.virtuals]</a> describes how a dynamically allocated array object is freed.)
+<span class='texttt'>(strmode &amp; frozen) == 0</span>. (<a href='depr.strstreambuf.virtuals'>[depr.strstreambuf.virtuals]</a> describes how a dynamically allocated array object is freed.)
 </p></div></div><div class='footnote' id='footnote-334'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-334'>334)</a></div><p >The function signature
 <span class='texttt'>strlen(const char*)</span>
 is declared in
@@ -171,7 +171,7 @@ is defined in
 <span class='texttt'>&lt;climits&gt;</span><span class='indexparent'><a class='index' id='climits'></a></span> (<a href='climits.syn'>[climits.syn]</a>).</p></div></div><div id='depr.strstreambuf.members'><h4 ><a class='secnum' href='#depr.strstreambuf.members' style='min-width:118pt'>D.5.1.2</a> Member functions <a class='abbr_ref' href='depr.strstreambuf.members'>[depr.strstreambuf.members]</a></h4><p ><span class='indexparent'><a class='index' id='freeze,strstreambuf'></a></span><span class='indexparent'><a class='index' id='strstreambuf,freeze'></a></span><code class='itemdecl'>
 void freeze(bool freezefl = true);
 </code></p><div class='itemdescr'></div><div class='para' id='depr.strstreambuf.members-1'><div class='marginalizedparent'><a class='marginalized' href='#depr.strstreambuf.members-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
-If <span class='texttt'>strmode</span> &amp; <span class='texttt'>dynamic</span> is nonzero, alters the
+If <span class='texttt'>strmode &amp; dynamic</span> is nonzero, alters the
 freeze status of the dynamic array object as follows:
 </p><ul class='itemize'><li id='depr.strstreambuf.members-1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#depr.strstreambuf.members-1.1'>(1.1)</a></div><p >If <span class='texttt'>freezefl</span> is
 <span class='texttt'>true</span>,
@@ -231,9 +231,9 @@ If <span class='texttt'>pfree</span> is not a null pointer,
 the function calls
 <span class='texttt'>(*pfree)(p)</span>.
 Otherwise, it evaluates the expression <span class='texttt'>delete[]p</span>.</p></div></div><div class='para' id='depr.strstreambuf.virtuals-6'><div class='marginalizedparent'><a class='marginalized' href='#depr.strstreambuf.virtuals-6'>6</a></div><div class='itemdescr'><p >If
-<span class='texttt'>strmode &amp; dynamic == 0</span>,
+<span class='texttt'>(strmode &amp; dynamic) == 0</span>,
 or if
-<span class='texttt'>strmode &amp; frozen != 0</span>,
+<span class='texttt'>(strmode &amp; frozen) != 0</span>,
 the function cannot extend the array (reallocate it with greater length) to make a write position available.
 </p></div></div><p ><span class='indexparent'><a class='index' id='pbackfail,strstreambuf'></a></span><span class='indexparent'><a class='index' id='strstreambuf,pbackfail'></a></span><code class='itemdecl'>
 int_type pbackfail(int_type c = EOF) override;
@@ -249,7 +249,7 @@ to <span class='texttt'>gnext</span>.</p><p >Returns <span class='texttt'>c</spa
 </p></li><li id='depr.strstreambuf.virtuals-7.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#depr.strstreambuf.virtuals-7.2'>(7.2)</a></div><p >If
 <span class='texttt'>c != EOF</span>,
 if the input sequence has a putback position available, and if
-<span class='texttt'>strmode</span> &amp; <span class='texttt'>constant</span> is zero,
+<span class='texttt'>strmode &amp; constant</span> is zero,
 assigns <span class='texttt'>c</span> to
 <span class='texttt'>*--gnext</span>.</p><p >Returns
 <span class='texttt'>c</span>.
