--- a/depr.strstreambuf.members.html
+++ b/depr.strstreambuf.members.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang='en'><head><title>[depr.strstreambuf.members]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='annexnum' style='min-width:73pt'>Annex D&emsp;(normative)</a> Compatibility features <a class='abbr_ref' href='./#depr'>[depr]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>D.5</a> <span class='texttt'>char*</span> streams <a class='abbr_ref' href='depr.str.strstreams#depr.strstreambuf.members'>[depr.str.strstreams]</a></h2><h3 ><a class='secnum' style='min-width:103pt'>D.5.1</a> Class <span class='texttt'>strstreambuf</span> <a class='abbr_ref' href='depr.strstreambuf#members'>[depr.strstreambuf]</a></h3><div id='depr.strstreambuf.members'><h4 ><a class='secnum' style='min-width:118pt'>D.5.1.2</a> Member functions <a class='abbr_ref'>[depr.strstreambuf.members]</a></h4><p ><span class='indexparent'><a class='index' id='freeze,strstreambuf'></a></span><span class='indexparent'><a class='index' id='strstreambuf,freeze'></a></span><code class='itemdecl'>
 void freeze(bool freezefl = true);
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
-If <span class='texttt'>strmode</span> &amp; <span class='texttt'>dynamic</span> is nonzero, alters the
+If <span class='texttt'>strmode &amp; dynamic</span> is nonzero, alters the
 freeze status of the dynamic array object as follows:
 </p><ul class='itemize'><li id='1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.1'>(1.1)</a></div><p >If <span class='texttt'>freezefl</span> is
 <span class='texttt'>true</span>,
