--- a/numeric.limits.members.html
+++ b/numeric.limits.members.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang='en'><head><title>[numeric.limits.members]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>18</a> Language support library <a class='abbr_ref' href='./#language.support'>[language.support]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>18.3</a> Implementation properties <a class='abbr_ref' href='support.limits#numeric.limits.members'>[support.limits]</a></h2><h3 ><a class='secnum' style='min-width:103pt'>18.3.2</a> Numeric limits <a class='abbr_ref' href='limits#numeric.limits.members'>[limits]</a></h3><div id='numeric.limits.members'><h4 ><a class='secnum' style='min-width:118pt'>18.3.2.4</a> <span class='texttt'>numeric_limits</span> members <a class='abbr_ref'>[numeric.limits.members]</a></h4><p ><span class='indexparent'><a class='index' id='min,numeric_limits'></a></span><span class='indexparent'><a class='index' id='numeric_limits,min'></a></span><code class='itemdecl'>
 static constexpr T min() noexcept;
-</code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p >Minimum finite value.<a class='footnotenum' href='#footnote-189'>189</a></p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p >For floating types with denormalization, returns the minimum positive
+</code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p >Minimum finite value.<a class='footnotenum' href='#footnote-189'>189</a></p><p ><span class='indexparent'><a class='index' id='number,subnormal'></a></span></p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p >For floating types with subnormal numbers, returns the minimum positive
 normalized value.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p >Meaningful for all specializations in which
 <span class='texttt'>is_bounded != false</span>,
 or
@@ -91,15 +91,15 @@ for all specializations in which
 <span class='texttt'>is_iec559 != false</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='float_denorm_style,numeric_limits'></a></span><span class='indexparent'><a class='index' id='numeric_limits,float_denorm_style'></a></span><code class='itemdecl'>
 static constexpr float_denorm_style has_denorm;
-</code></p><div class='itemdescr'></div><div class='para' id='44'><div class='marginalizedparent'><a class='marginalized' href='#44'>44</a></div><div class='itemdescr'><p ><span class='texttt'>denorm_present</span>
-if the type allows denormalized values
+</code></p><p ><span class='indexparent'><a class='index' id='number,subnormal'></a></span></p><div class='itemdescr'></div><div class='para' id='44'><div class='marginalizedparent'><a class='marginalized' href='#44'>44</a></div><div class='itemdescr'><p ><span class='texttt'>denorm_present</span>
+if the type allows subnormal values
 (variable number of exponent bits)<a class='footnotenum' href='#footnote-204'>204</a>,
 <span class='texttt'>denorm_absent</span>
-if the type does not allow denormalized values,
+if the type does not allow subnormal values,
 and
 <span class='texttt'>denorm_indeterminate</span>
 if it is indeterminate at compile time whether the type allows
-denormalized values.</p></div></div><div class='para' id='45'><div class='marginalizedparent'><a class='marginalized' href='#45'>45</a></div><div class='itemdescr'><p >Meaningful for all floating-point types.
+subnormal values.</p></div></div><div class='para' id='45'><div class='marginalizedparent'><a class='marginalized' href='#45'>45</a></div><div class='itemdescr'><p >Meaningful for all floating-point types.
 </p></div></div><p ><span class='indexparent'><a class='index' id='has_denorm_loss,numeric_limits'></a></span><span class='indexparent'><a class='index' id='numeric_limits,has_denorm_loss'></a></span><code class='itemdecl'>
 static constexpr bool has_denorm_loss;
 </code></p><div class='itemdescr'></div><div class='para' id='46'><div class='marginalizedparent'><a class='marginalized' href='#46'>46</a></div><div class='itemdescr'><p ><span class='texttt'>true</span> if loss of accuracy is detected as a
@@ -124,7 +124,7 @@ Required in specializations for which
 <span class='texttt'>is_iec559 != false</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='denorm_min,numeric_limits'></a></span><span class='indexparent'><a class='index' id='numeric_limits,denorm_min'></a></span><code class='itemdecl'>
 static constexpr T denorm_min() noexcept;
-</code></p><div class='itemdescr'></div><div class='para' id='53'><div class='marginalizedparent'><a class='marginalized' href='#53'>53</a></div><div class='itemdescr'><p >Minimum positive denormalized value.<a class='footnotenum' href='#footnote-209'>209</a></p></div></div><div class='para' id='54'><div class='marginalizedparent'><a class='marginalized' href='#54'>54</a></div><div class='itemdescr'><p >Meaningful for all floating-point types.</p></div></div><div class='para' id='55'><div class='marginalizedparent'><a class='marginalized' href='#55'>55</a></div><div class='itemdescr'><p >In specializations for which
+</code></p><div class='itemdescr'><p ><span class='indexparent'><a class='index' id='number,subnormal'></a></span></p></div><div class='para' id='53'><div class='marginalizedparent'><a class='marginalized' href='#53'>53</a></div><div class='itemdescr'><p >Minimum positive subnormal value.<a class='footnotenum' href='#footnote-209'>209</a></p></div></div><div class='para' id='54'><div class='marginalizedparent'><a class='marginalized' href='#54'>54</a></div><div class='itemdescr'><p >Meaningful for all floating-point types.</p></div></div><div class='para' id='55'><div class='marginalizedparent'><a class='marginalized' href='#55'>55</a></div><div class='itemdescr'><p >In specializations for which
 <span class='texttt'>has_denorm == false</span>,
 returns the minimum positive normalized value.
 </p></div></div><p ><span class='indexparent'><a class='index' id='is_iec559,numeric_limits'></a></span><span class='indexparent'><a class='index' id='numeric_limits,is_iec559'></a></span><code class='itemdecl'>
