--- a/string.rfind.html
+++ b/string.rfind.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html><html lang='en'><head><title>[string.rfind]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>21</a> Strings library <a class='abbr_ref' href='./#strings'>[strings]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>21.3</a> String classes <a class='abbr_ref' href='string.classes#string.rfind'>[string.classes]</a></h2><h3 ><a class='secnum' style='min-width:103pt'>21.3.2</a> Class template <span class='texttt'>basic_string</span> <a class='abbr_ref' href='basic.string#string.rfind'>[basic.string]</a></h3><h4 ><a class='secnum' style='min-width:118pt'>21.3.2.7</a> <span class='texttt'>basic_string</span> string operations <a class='abbr_ref' href='string.ops#string.rfind'>[string.ops]</a></h4><div id='string.rfind'><h4 ><a class='secnum' style='min-width:133pt'>21.3.2.7.3</a> <span class='texttt'>basic_string::rfind</span> <a class='abbr_ref'>[string.rfind]</a></h4><p ><span class='indexparent'><a class='index' id='rfind,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,rfind'></a></span><code class='itemdecl'>
-size_type rfind(basic_string_view&lt;charT, traits&gt; sv,
-                size_type pos = npos) const noexcept;
+size_type rfind(basic_string_view&lt;charT, traits&gt; sv, size_type pos = npos) const noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Determines the highest position <span class='texttt'>xpos</span>, if possible, such that both of
-the following conditions hold:</p><ul class='itemize'><li id='1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.1'>(1.1)</a></div><p ><span class='texttt'>xpos &lt;= pos</span>
+the following conditions hold:
+</p><ul class='itemize'><li id='1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.1'>(1.1)</a></div><p ><span class='texttt'>xpos &lt;= pos</span>
 and
 <span class='texttt'>xpos + sv.size() &lt;= size()</span>;
 </p></li><li id='1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.2'>(1.2)</a></div><p ><span class='indexparent'><a class='index' id='eq,char_traits'></a></span><span class='texttt'>traits::eq(at(xpos + I), sv.at(I))</span>
@@ -15,8 +15,7 @@ Otherwise, returns
 Uses
 <span class='texttt'>traits::eq()</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='rfind,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,rfind'></a></span><code class='itemdecl'>
-size_type rfind(const basic_string&amp; str,
-                size_type pos = npos) const noexcept;
+size_type rfind(const basic_string&amp; str, size_type pos = npos) const noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Equivalent to: <span class='texttt'>return rfind(basic_string_view&lt;charT, traits&gt;(str), pos);</span>
 </p></div></div><p ><span class='indexparent'><a class='index' id='rfind,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,rfind'></a></span><code class='itemdecl'>
