--- a/utility.html
+++ b/utility.html
@@ -14,11 +14,13 @@ namespace std {
   }
 
   <span class='comment'>// <a href='utility.swap'>[utility.swap]</a>, swap
-</span>  template &lt;class T&gt; void swap(T&amp; a, T&amp; b) noexcept(<i><span class='texttt'>see below</span></i>);
-  template &lt;class T, size_t N&gt; void swap(T (&amp;a)[N], T (&amp;b)[N]) noexcept(is_nothrow_swappable_v&lt;T&gt;);
+</span>  template &lt;class T&gt;
+    void swap(T&amp; a, T&amp; b) noexcept(<i><span class='texttt'>see below</span></i>);
+  template &lt;class T, size_t N&gt;
+    void swap(T (&amp;a)[N], T (&amp;b)[N]) noexcept(is_nothrow_swappable_v&lt;T&gt;);
 
   <span class='comment'>// <a href='utility.exchange'>[utility.exchange]</a>, exchange
-</span>  template &lt;class T, class U=T&gt; T exchange(T&amp; obj, U&amp;&amp; new_val);
+</span>  template &lt;class T, class U = T&gt; T exchange(T&amp; obj, U&amp;&amp; new_val);
 
   <span class='comment'>// <a href='forward'>[forward]</a>, forward/move
 </span>  template &lt;class T&gt; 
@@ -29,8 +31,9 @@ namespace std {
     constexpr remove_reference_t&lt;T&gt;&amp;&amp; move(T&amp;&amp;) noexcept;
   template &lt;class T&gt;
     constexpr conditional_t&lt;
-    !is_nothrow_move_constructible_v&lt;T&gt; &amp;&amp; is_copy_constructible_v&lt;T&gt;,
-    const T&amp;, T&amp;&amp;&gt; move_if_noexcept(T&amp; x) noexcept;
+        !is_nothrow_move_constructible_v&lt;T&gt; &amp;&amp; is_copy_constructible_v&lt;T&gt;,
+        const T&amp;, T&amp;&amp;&gt;
+      move_if_noexcept(T&amp; x) noexcept;
 
   <span class='comment'>// <a href='utility.as_const'>[utility.as_const]</a>, as_const
 </span>  template &lt;class T&gt; constexpr add_const_t&lt;T&gt;&amp; as_const(T&amp; t) noexcept;
@@ -39,9 +42,7 @@ namespace std {
   <span class='comment'>// <a href='declval'>[declval]</a>, declval
 </span>  template &lt;class T&gt;
     add_rvalue_reference_t&lt;T&gt; declval() noexcept;  <span class='comment'>// as unevaluated operand
-</span>
-
-<span class='indexparent'><a class='index' id='index_sequence'></a></span><span class='indexparent'><a class='index' id='make_index_sequence'></a></span><span class='indexparent'><a class='index' id='index_sequence_for'></a></span>
+</span><span class='indexparent'><a class='index' id='index_sequence'></a></span><span class='indexparent'><a class='index' id='make_index_sequence'></a></span><span class='indexparent'><a class='index' id='index_sequence_for'></a></span>%
   <span class='comment'>// <a href='intseq'>[intseq]</a>, Compile-time integer sequences
 </span>  template&lt;class T, T...&gt; struct integer_sequence;
   template&lt;size_t... I&gt;
@@ -242,7 +243,7 @@ unless <span class='texttt'>is_swappable_v&lt;T&gt;</span> is <span class='textt
 <span class='texttt'>a[i]</span> shall be swappable with (<a href='swappable.requirements'>[swappable.requirements]</a>) <span class='texttt'>b[i]</span>
 for all <span class='texttt'>i</span> in the range <span class='texttt'>[0, N)</span>.</p></div></div><div class='para' id='swap-6'><div class='marginalizedparent'><a class='marginalized' href='#swap-6'>6</a></div><div class='itemdescr'><p ><i>Effects:</i> As if by <span class='texttt'>swap_ranges(a, a + N, b)</span>.
 </p></div></div></div><div id='exchange'><h3 ><a class='secnum' href='#exchange' style='min-width:103pt'>20.2.3</a> <span class='texttt'>exchange</span> <a class='abbr_ref' href='utility.exchange'>[utility.exchange]</a></h3><p ><span class='indexparent'><a class='index' id='exchange'></a></span><code class='itemdecl'>
-template &lt;class T, class U=T&gt; T exchange(T&amp; obj, U&amp;&amp; new_val);
+template &lt;class T, class U = T&gt; T exchange(T&amp; obj, U&amp;&amp; new_val);
 </code></p><div class='itemdescr'></div><div class='para' id='exchange-1'><div class='marginalizedparent'><a class='marginalized' href='#exchange-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Equivalent to:
 </p><pre class='codeblock'>
