--- a/variant.variant.html
+++ b/variant.variant.html
@@ -294,8 +294,9 @@ variant&lt;string, string&gt; v;
 v = "abc";
 </pre><p >is ill-formed, as both alternative types have an equally viable constructor
 for the argument. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div><div class='para' id='variant.assign-14'><div class='marginalizedparent'><a class='marginalized' href='#variant.assign-14'>14</a></div><div class='itemdescr'><p >The expression inside <span class='texttt'>noexcept</span> is equivalent to:
-<span class='texttt'>is_nothrow_assignable_v&lt;T<span class='math'><sub ><span class='mathalpha'>j</span></sub></span>&amp;, T&gt; &amp;&amp; is_nothrow_constructible_v&lt;T<span class='math'><sub ><span class='mathalpha'>j</span></sub></span>, T&gt;</span>.
-</p><ul class='itemize'><li id='variant.assign-14.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#variant.assign-14.1'>(14.1)</a></div><p >If an exception is thrown during the assignment of <span class='texttt'>std::forward&lt;T&gt;(t)</span>
+</p><pre class='codeblock'>
+is_nothrow_assignable_v&lt;T<span class='math'><sub ><span class='mathalpha'>j</span></sub></span>&amp;, T&gt; &amp;&amp; is_nothrow_constructible_v&lt;T<span class='math'><sub ><span class='mathalpha'>j</span></sub></span>, T&gt;
+</pre><ul class='itemize'><li id='variant.assign-14.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#variant.assign-14.1'>(14.1)</a></div><p >If an exception is thrown during the assignment of <span class='texttt'>std::forward&lt;T&gt;(t)</span>
 to the value contained in <span class='texttt'>*this</span>, the state of the contained value and
 <span class='texttt'>t</span> are as defined by the exception safety guarantee of the assignment
 expression; <span class='texttt'>valueless_by_exception()</span> will be <span class='texttt'>false</span>.
