--- a/allocator.adaptor.html
+++ b/allocator.adaptor.html
@@ -172,16 +172,16 @@ template &lt;class OuterA2&gt;
 </code></p><div class='itemdescr'></div><div class='para' id='cnstr-8'><div class='marginalizedparent'><a class='marginalized' href='#cnstr-8'>8</a></div><div class='itemdescr'><p ><i>Requires:</i> <span class='texttt'>OuterAlloc</span> shall be constructible from <span class='texttt'>OuterA2</span>.</p></div></div><div class='para' id='cnstr-9'><div class='marginalizedparent'><a class='marginalized' href='#cnstr-9'>9</a></div><div class='itemdescr'><p ><i>Effects:</i> Initializes each allocator within the adaptor with the corresponding allocator rvalue
 from <span class='texttt'>other</span>.
 </p></div></div></div><div id='members'><h3 ><a class='secnum' href='#members' style='min-width:103pt'>20.13.4</a> Scoped allocator adaptor members <a class='abbr_ref' href='allocator.adaptor.members'>[allocator.adaptor.members]</a></h3><div class='para' id='members-1'><div class='marginalizedparent'><a class='marginalized' href='#members-1'>1</a></div><p >In the <span class='texttt'>construct</span> member functions,
-<i>OUTERMOST(x)</i> is <span class='texttt'>x</span> if <span class='texttt'>x</span> does not have an
-<span class='texttt'>outer_allocator()</span> member function and <br/>
-<i>OUTERMOST(x.outer_allocator())</i>
+<span class='texttt'><i>OUTERMOST</i>(x)</span> is <span class='texttt'>x</span> if <span class='texttt'>x</span> does not have an
+<span class='texttt'>outer_allocator()</span> member function and
+<span class='texttt'><i>OUTERMOST</i>(x.outer_allocator())</span>
 otherwise;
-<i>OUTERMOST_ALLOC_TRAITS(x)</i> is <br/>
+<span class='texttt'><i>OUTERMOST_ALLOC_TRAITS</i>(x)</span> is
 <span class='texttt'>allocator_traits&lt;decltype(<i>OUTERMOST</i>(x))&gt;</span>.
-[&nbsp;<i>Note:</i> <i>OUTERMOST</i>(x) and <br/>
-<i>OUTERMOST_ALLOC_TRAITS</i>(x) are recursive operations. It
+[&nbsp;<i>Note:</i> <span class='texttt'><i>OUTERMOST</i>(x)</span> and
+<span class='texttt'><i>OUTERMOST_ALLOC_TRAITS</i>(x)</span> are recursive operations. It
 is incumbent upon the definition of <span class='texttt'>outer_allocator()</span> to ensure that the
-recursion terminates. It will terminate for all instantiations of <br/>
+recursion terminates. It will terminate for all instantiations of
 <span class='texttt'>scoped_allocator_adaptor</span>. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p><p ><span class='indexparent'><a class='index' id='inner_allocator,scoped_allocator_adaptor'></a></span><span class='indexparent'><a class='index' id='scoped_allocator_adaptor,inner_allocator'></a></span><code class='itemdecl'>
 inner_allocator_type&amp; inner_allocator() noexcept;
 const inner_allocator_type&amp; inner_allocator() const noexcept;
@@ -209,54 +209,77 @@ size_type max_size() const;
 </p></div></div><p ><span class='indexparent'><a class='index' id='construct,scoped_allocator_adaptor'></a></span><span class='indexparent'><a class='index' id='scoped_allocator_adaptor,construct'></a></span><code class='itemdecl'>
 template &lt;class T, class... Args&gt;
   void construct(T* p, Args&amp;&amp;... args);
-</code></p><div class='itemdescr'></div><div class='para' id='members-9'><div class='marginalizedparent'><a class='marginalized' href='#members-9'>9</a></div><div class='itemdescr'><p ><i>Effects:</i></p><ul class='itemize'><li id='members-9.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-9.1'>(9.1)</a></div><p >If <span class='texttt'>uses_allocator_v&lt;T, inner_allocator_type&gt;</span> is <span class='texttt'>false</span> and<br/>
-<span class='texttt'>is_constructible_v&lt;T, Args...&gt;</span> is <span class='texttt'>true</span>, calls<br/>
-<i>OUTERMOST_ALLOC_TRAITS</i>(<span class='texttt'>*this</span>)<span class='texttt'>::construct(<br/>
-<i>OUTERMOST</i>(*this), p, std::forward&lt;Args&gt;(args)...)</span>.</p></li><li id='members-9.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-9.2'>(9.2)</a></div><p >Otherwise, if <span class='texttt'>uses_allocator_v&lt;T, inner_allocator_type&gt;</span> is <span class='texttt'>true</span> and
-<span class='texttt'>is_constructible_v&lt;T, allocator_arg_t, inner_allocator_type&amp;, Args...&gt;</span> is <span class='texttt'>true</span>, calls
-<i>OUTERMOST_ALLOC_TRAITS</i>(<span class='texttt'>*this</span>)<span class='texttt'>::construct(<i>OUTERMOST</i>(*this),
-p, allocator_arg,<br/>inner_allocator(), std::forward&lt;Args&gt;(args)...)</span>.</p></li><li id='members-9.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-9.3'>(9.3)</a></div><p >Otherwise, if <span class='texttt'>uses_allocator_v&lt;T, inner_allocator_type&gt;</span> is <span class='texttt'>true</span> and
-<span class='texttt'>is_constructible_v&lt;T, Args..., inner_allocator_type&amp;&gt;</span> is <span class='texttt'>true</span>, calls
-<i>OUTERMOST_ALLOC_TRAITS</i>(*this)::
-<span class='texttt'>construct(<i>OUTERMOST</i>(*this), p, std::forward&lt;Args&gt;(args)...,<br/>inner_allocator())</span>.</p></li><li id='members-9.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-9.4'>(9.4)</a></div><p >Otherwise, the program is ill-formed. [&nbsp;<i>Note:</i> An error will result if
+</code></p><div class='itemdescr'></div><div class='para' id='members-9'><div class='marginalizedparent'><a class='marginalized' href='#members-9'>9</a></div><div class='itemdescr'><p ><i>Effects:</i>
+</p><ul class='itemize'><li id='members-9.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-9.1'>(9.1)</a></div><p >If <span class='texttt'>uses_allocator_v&lt;T, inner_allocator_type&gt;</span> is <span class='texttt'>false</span> and
+<span class='texttt'>is_constructible_v&lt;T,<br/> Args...&gt;</span> is <span class='texttt'>true</span>, calls:
+</p><pre class='codeblock'>
+<i>OUTERMOST_ALLOC_TRAITS</i>(*this)::construct(
+    <i>OUTERMOST</i>(*this), p, std::forward&lt;Args&gt;(args)...)
+</pre></li><li id='members-9.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-9.2'>(9.2)</a></div><p >Otherwise, if <span class='texttt'>uses_allocator_v&lt;T, inner_allocator_type&gt;</span> is <span class='texttt'>true</span> and
+<span class='texttt'>is_constructible_v&lt;T, allocator_arg_t, inner_allocator_type&amp;, Args...&gt;</span> is <span class='texttt'>true</span>, calls:
+</p><pre class='codeblock'>
+<i>OUTERMOST_ALLOC_TRAITS</i>(*this)::construct(
+    <i>OUTERMOST</i>(*this), p, allocator_arg, inner_allocator(), std::forward&lt;Args&gt;(args)...)
+</pre></li><li id='members-9.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-9.3'>(9.3)</a></div><p >Otherwise, if <span class='texttt'>uses_allocator_v&lt;T, inner_allocator_type&gt;</span> is <span class='texttt'>true</span> and
+<span class='texttt'>is_constructible_v&lt;T, Args..., inner_allocator_type&amp;&gt;</span> is <span class='texttt'>true</span>, calls:
+</p><pre class='codeblock'>
+<i>OUTERMOST_ALLOC_TRAITS</i>(*this)::construct(
+    <i>OUTERMOST</i>(*this), p, std::forward&lt;Args&gt;(args)..., inner_allocator())
+</pre></li><li id='members-9.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-9.4'>(9.4)</a></div><p >Otherwise, the program is ill-formed.
+[&nbsp;<i>Note:</i>
+An error will result if
 <span class='texttt'>uses_allocator</span> evaluates to <span class='texttt'>true</span> but the specific constructor does not take an
 allocator. This definition prevents a silent failure to pass an inner allocator to a
-contained element. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
+contained element.
+<i>&nbsp;—&nbsp;end note</i>&nbsp;]
 </p></li></ul></div></div><p ><span class='indexparent'><a class='index' id='construct,scoped_allocator_adaptor'></a></span><span class='indexparent'><a class='index' id='scoped_allocator_adaptor,construct'></a></span><code class='itemdecl'>
 template &lt;class T1, class T2, class... Args1, class... Args2&gt;
   void construct(pair&lt;T1, T2&gt;* p, piecewise_construct_t,
                  tuple&lt;Args1...&gt; x, tuple&lt;Args2...&gt; y);
 </code></p><div class='itemdescr'></div><div class='para' id='members-10'><div class='marginalizedparent'><a class='marginalized' href='#members-10'>10</a></div><div class='itemdescr'><p ><i>Requires:</i> all of the types in <span class='texttt'>Args1</span> and <span class='texttt'>Args2</span> shall be
 <span class='texttt'>CopyConstructible</span> (Table <a href='utility.arg.requirements#tab:copyconstructible'>[tab:copyconstructible]</a>).</p></div></div><div class='para' id='members-11'><div class='marginalizedparent'><a class='marginalized' href='#members-11'>11</a></div><div class='itemdescr'><p ><i>Effects:</i> Constructs a <span class='texttt'>tuple</span> object <span class='texttt'>xprime</span> from <span class='texttt'>x</span> by the
-following rules:</p><ul class='itemize'><li id='members-11.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-11.1'>(11.1)</a></div><p >If <span class='texttt'>uses_allocator_v&lt;T1, inner_allocator_type&gt;</span> is <span class='texttt'>false</span> and<br/>
-<span class='texttt'>is_constructible_v&lt;T1, Args1...&gt;</span> is <span class='texttt'>true</span>,
+following rules:
+</p><ul class='itemize'><li id='members-11.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-11.1'>(11.1)</a></div><p >If <span class='texttt'>uses_allocator_v&lt;T1, inner_allocator_type&gt;</span> is <span class='texttt'>false</span> and
+<span class='texttt'>is_constructible_v&lt;T1,<br/> Args1...&gt;</span> is <span class='texttt'>true</span>,
 then <span class='texttt'>xprime</span> is <span class='texttt'>x</span>.</p></li><li id='members-11.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-11.2'>(11.2)</a></div><p >Otherwise, if <span class='texttt'>uses_allocator_v&lt;T1, inner_allocator_type&gt;</span> is <span class='texttt'>true</span>
 and
 <span class='texttt'>is_constructible_v&lt;T1, allocator_arg_t, inner_allocator_type&amp;, Args1...&gt;</span>
 is
-<span class='texttt'>true</span>, then <span class='texttt'>xprime</span> is
-<span class='texttt'>tuple_cat(tuple&lt;allocator_arg_t, inner_allocator_type&amp;&gt;(
-allocator_arg, inner_allocator()), std::move(x))</span>.</p></li><li id='members-11.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-11.3'>(11.3)</a></div><p >Otherwise, if <span class='texttt'>uses_allocator_v&lt;T1, inner_allocator_type&gt;</span> is
+<span class='texttt'>true</span>, then <span class='texttt'>xprime</span> is:
+</p><pre class='codeblock'>
+tuple_cat(
+    tuple&lt;allocator_arg_t, inner_allocator_type&amp;&gt;(allocator_arg, inner_allocator()),
+    std::move(x))
+</pre></li><li id='members-11.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-11.3'>(11.3)</a></div><p >Otherwise, if <span class='texttt'>uses_allocator_v&lt;T1, inner_allocator_type&gt;</span> is
 <span class='texttt'>true</span> and
 <span class='texttt'>is_constructible_v&lt;T1, Args1..., inner_allocator_type&amp;&gt;</span> is <span class='texttt'>true</span>,
-then <span class='texttt'>xprime</span> is
-<span class='texttt'>tuple_cat(std::move(x), tuple&lt;inner_allocator_type&amp;&gt;(inner_allocator()))</span>.</p></li><li id='members-11.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-11.4'>(11.4)</a></div><p >Otherwise, the program is ill-formed.
-</p></li></ul><p >and constructs a <span class='texttt'>tuple</span> object <span class='texttt'>yprime</span> from <span class='texttt'>y</span> by the following rules:</p><ul class='itemize'><li id='members-11.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-11.5'>(11.5)</a></div><p >If <span class='texttt'>uses_allocator_v&lt;T2, inner_allocator_type&gt;</span> is <span class='texttt'>false</span> and<br/>
-<span class='texttt'>is_constructible_v&lt;T2,
-Args2...&gt;</span> is <span class='texttt'>true</span>, then <span class='texttt'>yprime</span> is <span class='texttt'>y</span>.</p></li><li id='members-11.6'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-11.6'>(11.6)</a></div><p >Otherwise, if <span class='texttt'>uses_allocator_v&lt;T2, inner_allocator_type&gt;</span> is <span class='texttt'>true</span>
+then <span class='texttt'>xprime</span> is:
+</p><pre class='codeblock'>
+tuple_cat(std::move(x), tuple&lt;inner_allocator_type&amp;&gt;(inner_allocator()))
+</pre></li><li id='members-11.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-11.4'>(11.4)</a></div><p >Otherwise, the program is ill-formed.
+</p></li></ul><p >and constructs a <span class='texttt'>tuple</span> object <span class='texttt'>yprime</span> from <span class='texttt'>y</span> by the following rules:
+</p><ul class='itemize'><li id='members-11.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-11.5'>(11.5)</a></div><p >If <span class='texttt'>uses_allocator_v&lt;T2, inner_allocator_type&gt;</span> is <span class='texttt'>false</span> and
+<span class='texttt'>is_constructible_v&lt;T2,<br/> Args2...&gt;</span> is <span class='texttt'>true</span>, then <span class='texttt'>yprime</span> is <span class='texttt'>y</span>.</p></li><li id='members-11.6'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-11.6'>(11.6)</a></div><p >Otherwise, if <span class='texttt'>uses_allocator_v&lt;T2, inner_allocator_type&gt;</span> is <span class='texttt'>true</span>
 and
 <span class='texttt'>is_constructible_v&lt;T2, allocator_arg_t, inner_allocator_type&amp;, Args2...&gt;</span>
 is
-<span class='texttt'>true</span>, then <span class='texttt'>yprime</span> is
-<span class='texttt'>tuple_cat(tuple&lt;allocator_arg_t, inner_allocator_type&amp;&gt;(
-allocator_arg, inner_allocator()), std::move(y))</span>.</p></li><li id='members-11.7'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-11.7'>(11.7)</a></div><p >Otherwise, if <span class='texttt'>uses_allocator_v&lt;T2, inner_allocator_type&gt;</span> is
+<span class='texttt'>true</span>, then <span class='texttt'>yprime</span> is:
+</p><pre class='codeblock'>
+tuple_cat(
+    tuple&lt;allocator_arg_t, inner_allocator_type&amp;&gt;(allocator_arg, inner_allocator()),
+    std::move(y))
+</pre></li><li id='members-11.7'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-11.7'>(11.7)</a></div><p >Otherwise, if <span class='texttt'>uses_allocator_v&lt;T2, inner_allocator_type&gt;</span> is
 <span class='texttt'>true</span> and
 <span class='texttt'>is_constructible_v&lt;T2, Args2..., inner_allocator_type&amp;&gt;</span> is <span class='texttt'>true</span>,
-then <span class='texttt'>yprime</span> is
-<span class='texttt'>tuple_cat(std::move(y), tuple&lt;inner_allocator_type&amp;&gt;(inner_allocator()))</span>.</p></li><li id='members-11.8'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-11.8'>(11.8)</a></div><p >Otherwise, the program is ill-formed.
-</p></li></ul><p >then calls <span class='texttt'><i>OUTERMOST_ALLOC_TRAITS</i>(*this)::construct(<i>OUTERMOST</i>(*this), p,<br/>
-piecewise_construct, std::move(xprime), std::move(yprime))</span>.
-</p></div></div><p ><span class='indexparent'><a class='index' id='construct,scoped_allocator_adaptor'></a></span><span class='indexparent'><a class='index' id='scoped_allocator_adaptor,construct'></a></span><code class='itemdecl'>
+then <span class='texttt'>yprime</span> is:
+</p><pre class='codeblock'>
+tuple_cat(std::move(y), tuple&lt;inner_allocator_type&amp;&gt;(inner_allocator()))
+</pre></li><li id='members-11.8'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#members-11.8'>(11.8)</a></div><p >Otherwise, the program is ill-formed.
+</p></li></ul><p >then calls:
+</p><pre class='codeblock'>
+<i>OUTERMOST_ALLOC_TRAITS</i>(*this)::construct(
+    <i>OUTERMOST</i>(*this), p, piecewise_construct, std::move(xprime), std::move(yprime))
+</pre></div></div><p ><span class='indexparent'><a class='index' id='construct,scoped_allocator_adaptor'></a></span><span class='indexparent'><a class='index' id='scoped_allocator_adaptor,construct'></a></span><code class='itemdecl'>
 template &lt;class T1, class T2&gt;
   void construct(pair&lt;T1, T2&gt;* p);
 </code></p><div class='itemdescr'></div><div class='para' id='members-12'><div class='marginalizedparent'><a class='marginalized' href='#members-12'>12</a></div><div class='itemdescr'><p ><i>Effects:</i> Equivalent to:
