--- a/denorm.style.html
+++ b/denorm.style.html
@@ -6,11 +6,11 @@ namespace std {
     denorm_present = 1
   };
 }
-</pre><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >The presence or absence of denormalization (variable number of exponent bits)
+</pre><p ><span class='indexparent'><a class='index' id='denormalized_value'></a></span><span class='indexparent'><a class='index' id='value,denormalized'></a></span><span class='indexparent'><a class='index' id='subnormal_number'></a></span><span class='indexparent'><a class='index' id='number,subnormal'></a></span></p><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >The presence or absence of subnormal numbers (variable number of exponent bits)
 is characterized by the values:</p><ul class='itemize'><li id='1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.1'>(1.1)</a></div><p ><span class='indexparent'><a class='index' id='denorm_indeterminate'></a></span><span class='texttt'>denorm_indeterminate</span>
-if it cannot be determined whether or not the type allows denormalized values
+if it cannot be determined whether or not the type allows subnormal values
 </p></li><li id='1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.2'>(1.2)</a></div><p ><span class='indexparent'><a class='index' id='denorm_absent'></a></span><span class='texttt'>denorm_absent</span>
-if the type does not allow denormalized values
+if the type does not allow subnormal values
 </p></li><li id='1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.3'>(1.3)</a></div><p ><span class='indexparent'><a class='index' id='denorm_present'></a></span><span class='texttt'>denorm_present</span>
-if the type does allow denormalized values
+if the type does allow subnormal values
 </p></li></ul></div></div></div></body></html>
