--- a/language.support.html
+++ b/language.support.html
@@ -299,7 +299,7 @@ values.</p></div><div class='para' id='numeric.limits-2'><div class='marginalize
 <span class='texttt'>cv T</span> shall be equal to the value of the corresponding member of
 the specialization on the unqualified type <span class='texttt'>T</span>.</p></div></div><div id='numeric.limits.members'><h4 ><a class='secnum' href='#numeric.limits.members' style='min-width:118pt'>18.3.2.4</a> <span class='texttt'>numeric_limits</span> members <a class='abbr_ref' href='numeric.limits.members'>[numeric.limits.members]</a></h4><p ><span class='indexparent'><a class='index' id='min,numeric_limits'></a></span><span class='indexparent'><a class='index' id='numeric_limits,min'></a></span><code class='itemdecl'>
 static constexpr T min() noexcept;
-</code></p><div class='itemdescr'></div><div class='para' id='numeric.limits.members-1'><div class='marginalizedparent'><a class='marginalized' href='#numeric.limits.members-1'>1</a></div><div class='itemdescr'><p >Minimum finite value.<a class='footnotenum' href='#footnote-189'>189</a></p></div></div><div class='para' id='numeric.limits.members-2'><div class='marginalizedparent'><a class='marginalized' href='#numeric.limits.members-2'>2</a></div><div class='itemdescr'><p >For floating types with denormalization, returns the minimum positive
+</code></p><div class='itemdescr'></div><div class='para' id='numeric.limits.members-1'><div class='marginalizedparent'><a class='marginalized' href='#numeric.limits.members-1'>1</a></div><div class='itemdescr'><p >Minimum finite value.<a class='footnotenum' href='#footnote-189'>189</a></p><p ><span class='indexparent'><a class='index' id='number,subnormal'></a></span></p></div></div><div class='para' id='numeric.limits.members-2'><div class='marginalizedparent'><a class='marginalized' href='#numeric.limits.members-2'>2</a></div><div class='itemdescr'><p >For floating types with subnormal numbers, returns the minimum positive
 normalized value.</p></div></div><div class='para' id='numeric.limits.members-3'><div class='marginalizedparent'><a class='marginalized' href='#numeric.limits.members-3'>3</a></div><div class='itemdescr'><p >Meaningful for all specializations in which
 <span class='texttt'>is_bounded != false</span>,
 or
@@ -390,15 +390,15 @@ for all specializations in which
 <span class='texttt'>is_iec559 != false</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='float_denorm_style,numeric_limits'></a></span><span class='indexparent'><a class='index' id='numeric_limits,float_denorm_style'></a></span><code class='itemdecl'>
 static constexpr float_denorm_style has_denorm;
-</code></p><div class='itemdescr'></div><div class='para' id='numeric.limits.members-44'><div class='marginalizedparent'><a class='marginalized' href='#numeric.limits.members-44'>44</a></div><div class='itemdescr'><p ><span class='texttt'>denorm_present</span>
-if the type allows denormalized values
+</code></p><p ><span class='indexparent'><a class='index' id='number,subnormal'></a></span></p><div class='itemdescr'></div><div class='para' id='numeric.limits.members-44'><div class='marginalizedparent'><a class='marginalized' href='#numeric.limits.members-44'>44</a></div><div class='itemdescr'><p ><span class='texttt'>denorm_present</span>
+if the type allows subnormal values
 (variable number of exponent bits)<a class='footnotenum' href='#footnote-204'>204</a>,
 <span class='texttt'>denorm_absent</span>
-if the type does not allow denormalized values,
+if the type does not allow subnormal values,
 and
 <span class='texttt'>denorm_indeterminate</span>
 if it is indeterminate at compile time whether the type allows
-denormalized values.</p></div></div><div class='para' id='numeric.limits.members-45'><div class='marginalizedparent'><a class='marginalized' href='#numeric.limits.members-45'>45</a></div><div class='itemdescr'><p >Meaningful for all floating-point types.
+subnormal values.</p></div></div><div class='para' id='numeric.limits.members-45'><div class='marginalizedparent'><a class='marginalized' href='#numeric.limits.members-45'>45</a></div><div class='itemdescr'><p >Meaningful for all floating-point types.
 </p></div></div><p ><span class='indexparent'><a class='index' id='has_denorm_loss,numeric_limits'></a></span><span class='indexparent'><a class='index' id='numeric_limits,has_denorm_loss'></a></span><code class='itemdecl'>
 static constexpr bool has_denorm_loss;
 </code></p><div class='itemdescr'></div><div class='para' id='numeric.limits.members-46'><div class='marginalizedparent'><a class='marginalized' href='#numeric.limits.members-46'>46</a></div><div class='itemdescr'><p ><span class='texttt'>true</span> if loss of accuracy is detected as a
@@ -423,7 +423,7 @@ Required in specializations for which
 <span class='texttt'>is_iec559 != false</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='denorm_min,numeric_limits'></a></span><span class='indexparent'><a class='index' id='numeric_limits,denorm_min'></a></span><code class='itemdecl'>
 static constexpr T denorm_min() noexcept;
-</code></p><div class='itemdescr'></div><div class='para' id='numeric.limits.members-53'><div class='marginalizedparent'><a class='marginalized' href='#numeric.limits.members-53'>53</a></div><div class='itemdescr'><p >Minimum positive denormalized value.<a class='footnotenum' href='#footnote-209'>209</a></p></div></div><div class='para' id='numeric.limits.members-54'><div class='marginalizedparent'><a class='marginalized' href='#numeric.limits.members-54'>54</a></div><div class='itemdescr'><p >Meaningful for all floating-point types.</p></div></div><div class='para' id='numeric.limits.members-55'><div class='marginalizedparent'><a class='marginalized' href='#numeric.limits.members-55'>55</a></div><div class='itemdescr'><p >In specializations for which
+</code></p><div class='itemdescr'><p ><span class='indexparent'><a class='index' id='number,subnormal'></a></span></p></div><div class='para' id='numeric.limits.members-53'><div class='marginalizedparent'><a class='marginalized' href='#numeric.limits.members-53'>53</a></div><div class='itemdescr'><p >Minimum positive subnormal value.<a class='footnotenum' href='#footnote-209'>209</a></p></div></div><div class='para' id='numeric.limits.members-54'><div class='marginalizedparent'><a class='marginalized' href='#numeric.limits.members-54'>54</a></div><div class='itemdescr'><p >Meaningful for all floating-point types.</p></div></div><div class='para' id='numeric.limits.members-55'><div class='marginalizedparent'><a class='marginalized' href='#numeric.limits.members-55'>55</a></div><div class='itemdescr'><p >In specializations for which
 <span class='texttt'>has_denorm == false</span>,
 returns the minimum positive normalized value.
 </p></div></div><p ><span class='indexparent'><a class='index' id='is_iec559,numeric_limits'></a></span><span class='indexparent'><a class='index' id='numeric_limits,is_iec559'></a></span><code class='itemdecl'>
@@ -507,13 +507,13 @@ namespace std {
     denorm_present = 1
   };
 }
-</pre><div class='para' id='denorm.style-1'><div class='marginalizedparent'><a class='marginalized' href='#denorm.style-1'>1</a></div><p >The presence or absence of denormalization (variable number of exponent bits)
+</pre><p ><span class='indexparent'><a class='index' id='denormalized_value'></a></span><span class='indexparent'><a class='index' id='value,denormalized'></a></span><span class='indexparent'><a class='index' id='subnormal_number'></a></span><span class='indexparent'><a class='index' id='number,subnormal'></a></span></p><div class='para' id='denorm.style-1'><div class='marginalizedparent'><a class='marginalized' href='#denorm.style-1'>1</a></div><p >The presence or absence of subnormal numbers (variable number of exponent bits)
 is characterized by the values:</p><ul class='itemize'><li id='denorm.style-1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#denorm.style-1.1'>(1.1)</a></div><p ><span class='indexparent'><a class='index' id='denorm_indeterminate'></a></span><span class='texttt'>denorm_indeterminate</span>
-if it cannot be determined whether or not the type allows denormalized values
+if it cannot be determined whether or not the type allows subnormal values
 </p></li><li id='denorm.style-1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#denorm.style-1.2'>(1.2)</a></div><p ><span class='indexparent'><a class='index' id='denorm_absent'></a></span><span class='texttt'>denorm_absent</span>
-if the type does not allow denormalized values
+if the type does not allow subnormal values
 </p></li><li id='denorm.style-1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#denorm.style-1.3'>(1.3)</a></div><p ><span class='indexparent'><a class='index' id='denorm_present'></a></span><span class='texttt'>denorm_present</span>
-if the type does allow denormalized values
+if the type does allow subnormal values
 </p></li></ul></div></div><div id='numeric.special'><h4 ><a class='secnum' href='#numeric.special' style='min-width:118pt'>18.3.2.7</a> <span class='texttt'>numeric_limits</span> specializations <a class='abbr_ref' href='numeric.special'>[numeric.special]</a></h4><div class='para' id='numeric.special-1'><div class='marginalizedparent'><a class='marginalized' href='#numeric.special-1'>1</a></div><p >All members shall be provided for all specializations.
 However, many values are only required to be meaningful under certain
 conditions
