--- a/localization.html
+++ b/localization.html
@@ -1382,46 +1382,52 @@ namespace std {
   };
 
   template &lt;class internT, class externT, class stateT&gt;
-  class codecvt : public locale::facet, public codecvt_base {
-  public:
-    using intern_type = internT;
-    using extern_type = externT;
-    using state_type  = stateT;
+    class codecvt : public locale::facet, public codecvt_base {
+    public:
+      using intern_type = internT;
+      using extern_type = externT;
+      using state_type  = stateT;
 
-    explicit codecvt(size_t refs = 0);
+      explicit codecvt(size_t refs = 0);
 
-    result out(stateT&amp; state,
-               const internT* from, const internT* from_end, const internT*&amp; from_next,
-               externT*   to,       externT* to_end, externT*&amp; to_next) const;
-    result unshift(stateT&amp; state,
-                   externT*   to,        externT* to_end, externT*&amp; to_next) const;
-    result in(stateT&amp; state,
-              const externT* from, const externT* from_end, const externT*&amp; from_next,
-              internT*   to,       internT* to_end, internT*&amp; to_next) const;
-    int encoding() const noexcept;
-    bool always_noconv() const noexcept;
-    int length(stateT&amp;, const externT* from, const externT* end,
-               size_t max) const;
-    int max_length() const noexcept;
+      result out(
+          stateT&amp; state,
+          const internT* from, const internT* from_end, const internT*&amp; from_next,
+                externT*   to,       externT*   to_end,       externT*&amp;   to_next) const;
+      result unshift(
+          stateT&amp; state,
+                externT*    to,      externT*   to_end,       externT*&amp;   to_next) const;
+      result in(
+          stateT&amp; state,
+          const externT* from, const externT* from_end, const externT*&amp; from_next,
+                internT*   to,       internT*   to_end,       internT*&amp;   to_next) const;
 
-    static locale::id id;
+      int encoding() const noexcept;
+      bool always_noconv() const noexcept;
+      int length(stateT&amp;, const externT* from, const externT* end, size_t max) const;
+      int max_length() const noexcept;
 
-  protected:
-    ~codecvt();
-    virtual result do_out(stateT&amp; state,
-                          const internT* from, const internT* from_end, const internT*&amp; from_next,
-                          externT* to,         externT* to_end, externT*&amp; to_next) const;
-    virtual result do_in(stateT&amp; state,
-                         const externT* from, const externT* from_end, const externT*&amp; from_next,
-                         internT* to,         internT* to_end, internT*&amp; to_next) const;
-    virtual result do_unshift(stateT&amp; state,
-                              externT* to,         externT* to_end, externT*&amp; to_next) const;
-    virtual int do_encoding() const noexcept;
-    virtual bool do_always_noconv() const noexcept;
-    virtual int do_length(stateT&amp;, const externT* from,
-                          const externT* end, size_t max) const;
-    virtual int do_max_length() const noexcept;
-  };
+      static locale::id id;
+
+    protected:
+      ~codecvt();
+      virtual result do_out(
+          stateT&amp; state,
+          const internT* from, const internT* from_end, const internT*&amp; from_next,
+                externT* to,         externT*   to_end,       externT*&amp;   to_next) const;
+      virtual result do_in(
+          stateT&amp; state,
+          const externT* from, const externT* from_end, const externT*&amp; from_next,
+                internT* to,         internT*   to_end,       internT*&amp;   to_next) const;
+      virtual result do_unshift(
+          stateT&amp; state,
+                externT* to,         externT*   to_end,       externT*&amp;   to_next) const;
+
+      virtual int do_encoding() const noexcept;
+      virtual bool do_always_noconv() const noexcept;
+      virtual int do_length(stateT&amp;, const externT* from, const externT* end, size_t max) const;
+      virtual int do_max_length() const noexcept;
+    };
 }
 </pre><div class='para' id='locale.codecvt-1'><div class='marginalizedparent'><a class='marginalized' href='#locale.codecvt-1'>1</a></div><p >The class
 <span class='texttt'>codecvt&lt;internT,externT,stateT&gt;</span>
@@ -3418,9 +3424,9 @@ pattern do_neg_format() const;
 The specializations required in Table <a href='#tab:localization.required.specializations'>[tab:localization.required.specializations]</a> (<a href='locale.category'>[locale.category]</a>), namely
 <span class='texttt'>moneypunct&lt;char&gt;</span>,
 <span class='texttt'>moneypunct&lt;wchar_t&gt;</span>,
-<span class='texttt'>moneypunct&lt;char,true&gt;</span>,
+<span class='texttt'>moneypunct&lt;char, true&gt;</span>,
 and
-<span class='texttt'>moneypunct&lt;wchar_t,true&gt;</span>,
+<span class='texttt'>moneypunct&lt;wchar_t, true&gt;</span>,
 return an object of type
 <span class='texttt'>pattern</span>
 initialized to
