--- a/string.compare.html
+++ b/string.compare.html
@@ -14,8 +14,7 @@ Otherwise, returns a value as indicated in Table <a href='#tab:strings.compare'>
 <span class='texttt'>size() &lt;  sv.size()</span>  </td><td class='center'>   <span class='texttt'>&lt; 0</span>         </td></tr><tr ><td class='left'>
 <span class='texttt'>size() == sv.size()</span>    </td><td class='center'>   <span class='texttt'>  0</span>       </td></tr><tr ><td class='left'>
 <span class='texttt'>size() &gt;  sv.size()</span>  </td><td class='center'>   <span class='texttt'>&gt; 0</span>         </td></tr></table></div></div></div><p ><span class='indexparent'><a class='index' id='compare,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,compare'></a></span><code class='itemdecl'>
-int compare(size_type pos1, size_type n1,
-            basic_string_view&lt;charT, traits&gt; sv) const;
+int compare(size_type pos1, size_type n1, basic_string_view&lt;charT, traits&gt; sv) const;
 </code></p><div class='itemdescr'></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Equivalent to:
 </p><pre class='codeblock'>
@@ -28,7 +27,8 @@ template&lt;class T&gt;
 Equivalent to:
 </p><pre class='codeblock'>
 basic_string_view&lt;charT, traits&gt; sv = t;
-return basic_string_view&lt;charT, traits&gt;(data(), size()).substr(pos1, n1).compare(sv.substr(pos2, n2));
+return basic_string_view&lt;charT, traits&gt;(
+    data(), size()).substr(pos1, n1).compare(sv.substr(pos2, n2));
 </pre></div></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Remarks:</i>
 This function shall not participate in overload resolution
 unless <span class='texttt'>is_convertible_v&lt;const T&amp;, basic_string_view&lt;charT, traits&gt;&gt;</span>
@@ -39,8 +39,7 @@ int compare(const basic_string&amp; str) const noexcept;
 Equivalent to:
 <span class='texttt'>return compare(basic_string_view&lt;charT, traits&gt;(str));</span>
 </p></div></div><p ><span class='indexparent'><a class='index' id='compare,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,compare'></a></span><code class='itemdecl'>
-int compare(size_type pos1, size_type n1,
-            const basic_string&amp; str) const;
+int compare(size_type pos1, size_type n1, const basic_string&amp; str) const;
 </code></p><div class='itemdescr'></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Equivalent to:
 <span class='texttt'>return compare(pos1, n1, basic_string_view&lt;charT, traits&gt;(str));</span>
@@ -56,11 +55,9 @@ int compare(const charT* s) const;
 </code></p><div class='itemdescr'></div><div class='para' id='9'><div class='marginalizedparent'><a class='marginalized' href='#9'>9</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>compare(basic_string(s))</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='compare,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,compare'></a></span><code class='itemdecl'>
-int compare(size_type pos, size_type n1,
-            const charT* s) const;
+int compare(size_type pos, size_type n1, const charT* s) const;
 </code></p><div class='itemdescr'></div><div class='para' id='10'><div class='marginalizedparent'><a class='marginalized' href='#10'>10</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>basic_string(*this, pos, n1).compare(basic_string(s))</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='compare,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,compare'></a></span><code class='itemdecl'>
-int compare(size_type pos, size_type n1,
-            const charT* s, size_type n2) const;
+int compare(size_type pos, size_type n1, const charT* s, size_type n2) const;
 </code></p><div class='itemdescr'></div><div class='para' id='11'><div class='marginalizedparent'><a class='marginalized' href='#11'>11</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>basic_string(*this, pos, n1).compare(basic_string(s, n2))</span>.
 </p></div></div></div></div></body></html>
