--- a/string.find.first.not.of.html
+++ b/string.find.first.not.of.html
@@ -3,7 +3,8 @@ size_type find_first_not_of(basic_string_view&lt;charT, traits&gt; sv,
                             size_type pos = 0) const noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Determines the lowest position <span class='texttt'>xpos</span>, if possible, such that both of
-the following conditions hold:</p><ul class='itemize'><li id='1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.1'>(1.1)</a></div><p ><span class='texttt'>pos &lt;= xpos</span>
+the following conditions hold:
+</p><ul class='itemize'><li id='1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.1'>(1.1)</a></div><p ><span class='texttt'>pos &lt;= xpos</span>
 and
 <span class='texttt'>xpos &lt; size()</span>;
 </p></li><li id='1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.2'>(1.2)</a></div><p ><span class='indexparent'><a class='index' id='eq,char_traits'></a></span><span class='texttt'>traits::eq(at(xpos), sv.at(I))</span>
@@ -15,14 +16,13 @@ Otherwise, returns
 Uses
 <span class='texttt'>traits::eq()</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='find_first_not_of,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,find_first_not_of'></a></span><code class='itemdecl'>
-size_type find_first_not_of(const basic_string&amp; str,
-                            size_type pos = 0) const noexcept;
+size_type find_first_not_of(const basic_string&amp; str, size_type pos = 0) const noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Equivalent to:
-<span class='texttt'>return find_first_not_of(basic_string_view&lt;charT, traits&gt;(str), pos);</span>
-</p></div></div><p ><span class='indexparent'><a class='index' id='find_first_not_of,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,find_first_not_of'></a></span><code class='itemdecl'>
-size_type
-  find_first_not_of(const charT* s, size_type pos, size_type n) const;
+</p><pre class='codeblock'>
+return find_first_not_of(basic_string_view&lt;charT, traits&gt;(str), pos);
+</pre></div></div><p ><span class='indexparent'><a class='index' id='find_first_not_of,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,find_first_not_of'></a></span><code class='itemdecl'>
+size_type find_first_not_of(const charT* s, size_type pos, size_type n) const;
 </code></p><div class='itemdescr'></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>find_first_not_of(basic_string_view&lt;charT, traits&gt;(s, n), pos)</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='find_first_not_of,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,find_first_not_of'></a></span><code class='itemdecl'>
