--- a/string.find.first.of.html
+++ b/string.find.first.of.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html><html lang='en'><head><title>[string.find.first.of]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>21</a> Strings library <a class='abbr_ref' href='./#strings'>[strings]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>21.3</a> String classes <a class='abbr_ref' href='string.classes#string.find.first.of'>[string.classes]</a></h2><h3 ><a class='secnum' style='min-width:103pt'>21.3.2</a> Class template <span class='texttt'>basic_string</span> <a class='abbr_ref' href='basic.string#string.find.first.of'>[basic.string]</a></h3><h4 ><a class='secnum' style='min-width:118pt'>21.3.2.7</a> <span class='texttt'>basic_string</span> string operations <a class='abbr_ref' href='string.ops#string.find.first.of'>[string.ops]</a></h4><div id='string.find.first.of'><h4 ><a class='secnum' style='min-width:133pt'>21.3.2.7.4</a> <span class='texttt'>basic_string::find_first_of</span> <a class='abbr_ref'>[string.find.first.of]</a></h4><p ><span class='indexparent'><a class='index' id='find_first_of,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,find_first_of'></a></span><code class='itemdecl'>
-size_type find_first_of(basic_string_view&lt;charT, traits&gt; sv,
-                        size_type pos = 0) const noexcept;
+size_type find_first_of(basic_string_view&lt;charT, traits&gt; sv, size_type pos = 0) const noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Determines the lowest position <span class='texttt'>xpos</span>, if possible, such that both of
 the following conditions hold:</p><ul class='itemize'><li id='1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.1'>(1.1)</a></div><p ><span class='texttt'>pos &lt;= xpos</span>
@@ -15,13 +14,11 @@ Otherwise, returns
 Uses
 <span class='texttt'>traits::eq()</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='find_first_of,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,find_first_of'></a></span><code class='itemdecl'>
-size_type find_first_of(const basic_string&amp; str,
-                        size_type pos = 0) const noexcept;
+size_type find_first_of(const basic_string&amp; str, size_type pos = 0) const noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Equivalent to: <span class='texttt'>return find_first_of(basic_string_view&lt;charT, traits&gt;(str), pos);</span>
 </p></div></div><p ><span class='indexparent'><a class='index' id='find_first_of,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,find_first_of'></a></span><code class='itemdecl'>
-size_type
-  find_first_of(const charT* s, size_type pos, size_type n) const;
+size_type find_first_of(const charT* s, size_type pos, size_type n) const;
 </code></p><div class='itemdescr'></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>find_first_of(basic_string_view&lt;charT, traits&gt;(s, n), pos)</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='find_first_of,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,find_first_of'></a></span><code class='itemdecl'>
