--- a/string.find.last.not.of.html
+++ b/string.find.last.not.of.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html><html lang='en'><head><title>[string.find.last.not.of]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>21</a> Strings library <a class='abbr_ref' href='./#strings'>[strings]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>21.3</a> String classes <a class='abbr_ref' href='string.classes#string.find.last.not.of'>[string.classes]</a></h2><h3 ><a class='secnum' style='min-width:103pt'>21.3.2</a> Class template <span class='texttt'>basic_string</span> <a class='abbr_ref' href='basic.string#string.find.last.not.of'>[basic.string]</a></h3><h4 ><a class='secnum' style='min-width:118pt'>21.3.2.7</a> <span class='texttt'>basic_string</span> string operations <a class='abbr_ref' href='string.ops#string.find.last.not.of'>[string.ops]</a></h4><div id='string.find.last.not.of'><h4 ><a class='secnum' style='min-width:133pt'>21.3.2.7.7</a> <span class='texttt'>basic_string::find_last_not_of</span> <a class='abbr_ref'>[string.find.last.not.of]</a></h4><p ><span class='indexparent'><a class='index' id='find_last_not_of,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,find_last_not_of'></a></span><code class='itemdecl'>
-size_type find_last_not_of (basic_string_view&lt;charT, traits&gt; sv,
-                            size_type pos = npos) const noexcept;
+size_type find_last_not_of(basic_string_view&lt;charT, traits&gt; sv,
+                           size_type pos = npos) const noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Determines the highest position <span class='texttt'>xpos</span>, if possible, such that both of
-the following conditions hold:</p><ul class='itemize'><li id='1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.1'>(1.1)</a></div><p ><span class='texttt'>xpos &lt;= pos</span>
+the following conditions hold:
+</p><ul class='itemize'><li id='1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.1'>(1.1)</a></div><p ><span class='texttt'>xpos &lt;= pos</span>
 and
 <span class='texttt'>xpos &lt; size()</span>;
 </p></li><li id='1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.2'>(1.2)</a></div><p ><span class='indexparent'><a class='index' id='eq,char_traits'></a></span><span class='texttt'>traits::eq(at(xpos), sv.at(I))</span>
@@ -15,14 +16,13 @@ Otherwise, returns
 Uses
 <span class='texttt'>traits::eq()</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='find_last_not_of,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,find_last_not_of'></a></span><code class='itemdecl'>
-size_type find_last_not_of(const basic_string&amp; str,
-                           size_type pos = npos) const noexcept;
+size_type find_last_not_of(const basic_string&amp; str, size_type pos = npos) const noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Equivalent to:
-<span class='texttt'>return find_last_not_of(basic_string_view&lt;charT, traits&gt;(str), pos);</span>
-</p></div></div><p ><span class='indexparent'><a class='index' id='find_last_not_of,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,find_last_not_of'></a></span><code class='itemdecl'>
-size_type find_last_not_of(const charT* s, size_type pos,
-                           size_type n) const;
+</p><pre class='codeblock'>
+return find_last_not_of(basic_string_view&lt;charT, traits&gt;(str), pos);
+</pre></div></div><p ><span class='indexparent'><a class='index' id='find_last_not_of,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,find_last_not_of'></a></span><code class='itemdecl'>
+size_type find_last_not_of(const charT* s, size_type pos, size_type n) const;
 </code></p><div class='itemdescr'></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>find_last_not_of(basic_string_view&lt;charT, traits&gt;(s, n), pos)</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='find_last_not_of,basic_string'></a></span><span class='indexparent'><a class='index' id='basic_string,find_last_not_of'></a></span><code class='itemdecl'>
