--- a/utilities.html
+++ b/utilities.html
@@ -5757,7 +5757,7 @@ namespace std::pmr {
   bool operator==(const memory_resource&amp; a, const memory_resource&amp; b) noexcept;
   bool operator!=(const memory_resource&amp; a, const memory_resource&amp; b) noexcept;
 
-  <span class='comment'>// <a href='mem.poly.allocator.class'>[mem.poly.allocator.class]</a>, class <span class='texttt'>polymorphic_allocator</span>
+  <span class='comment'>// <a href='mem.poly.allocator.class'>[mem.poly.allocator.class]</a>, class template <span class='texttt'>polymorphic_allocator</span>
 </span>  template &lt;class Tp&gt; class polymorphic_allocator;
 
   template &lt;class T1, class T2&gt;
